# sage_kaizen_ai_voice

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  requirements_old.txt  sk_logging.py
config/: paths.yaml  voice.yaml
scripts/: run_pipeline.py  verify_setup.py
src/: _zmq_handlers.py  config.py  voice_pipeline.py
src/stt/: audio_capture.py  transcriber.py
src/tts/: expression_engine.py  player.py  synthesizer.py
tests/: test_expression.py  test_stt.py  test_tts.py
