[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sage-kaizen-ai-voice"
version = "2.0.0"
description = "Voice pipeline (STT + TTS) for the Sage Kaizen local AI system"
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = {text = "MIT"}

dependencies = [
    "faster-whisper>=1.2.1",
    "kokoro-onnx>=0.5.0",
    "onnxruntime>=1.20.0",
    "sounddevice>=0.5.0",
    "soundfile>=0.12.1",
    "PyAudio>=0.2.14",
    "numpy>=1.26.0,<3.0.0",
    "pyzmq>=25.1.0",
    "PyYAML>=6.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
sage-voice = "scripts.run_pipeline:main"
sage-verify = "scripts.verify_setup:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
